--- a/style.css
+++ b/style.css
@@ -56,3 +56,46 @@ body {
     opacity: 0.7;
     text-shadow:  1px 1px 3px rgba(0,0,0, 0.2);
 }
+
+.shop-content {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    margin-left: 80px;
+    margin-right: 80px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.card > img {
+    width: 90%;
+    height: 250px;
+}
+ 
+.price {
+    color: grey;
+    font-size: 22px;
+}
+
+.card button {
+    border:none;
+    outline: 0;
+    padding: 12px;
+    color: black;
+    background-color: #A4E6FA;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+.card button:hover {
+    opacity: 0.7;
+}
