--- a/style.css
+++ b/style.css
@@ -159,3 +159,8 @@ body {
     text-align: center;
     padding-top: 20px;
 }
+
+.delete-product{
+    cursor: pointer;
+    background-image: url(img/delete.png);
+}
