--- a/style.css
+++ b/style.css
@@ -160,6 +160,19 @@ body {
     padding-top: 20px;
 }
 
-.delete-product{
+.delete-product {
     cursor: pointer;
+}
+
+.cantidad-carrito {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    font-size: 12px;
+    padding: 4px;
+    top: 37px;
+    right: 14px;
+    position: absolute;
+    display: none;
+
 }
