--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    background-color: rgb(245, 148, 200);
+    background-color:#A670E4;
 
 }
 
@@ -66,7 +66,7 @@ body {
     margin-top: 30px;
     margin-left: 80px;
     margin-right: 80px;
-    background-color: rgb(245, 148, 200);
+    background-color:#A670E4;
 }
 
 .card {
